// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering points - areas Multi series area chart - linear can render first spec points 1`] = `
Array [
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 100,
    "y": 75,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - linear can render second spec points 1`] = `
Array [
  Object {
    "color": "blue",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_2",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 255,
          "g": 0,
          "opacity": 1,
          "r": 0,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        20,
      ],
      "mark": null,
      "x": 0,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "blue",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_2",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 255,
          "g": 0,
          "opacity": 1,
          "r": 0,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1,
        10,
      ],
      "mark": null,
      "x": 1,
      "y": 10,
    },
    "x": 100,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - ordinal can render first spec points 1`] = `
Array [
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 50,
    "y": 75,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - ordinal can render second spec points 1`] = `
Array [
  Object {
    "color": "blue",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_2",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 255,
          "g": 0,
          "opacity": 1,
          "r": 0,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        20,
      ],
      "mark": null,
      "x": 0,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "blue",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_2",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 255,
          "g": 0,
          "opacity": 1,
          "r": 0,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1,
        10,
      ],
      "mark": null,
      "x": 1,
      "y": 10,
    },
    "x": 50,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - time can render first spec points 1`] = `
Array [
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1546300800000,
        10,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1546387200000,
        5,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 5,
    },
    "x": 100,
    "y": 75,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - time can render second spec points 1`] = `
Array [
  Object {
    "color": "blue",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_2",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 255,
          "g": 0,
          "opacity": 1,
          "r": 0,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1546300800000,
        20,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "blue",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_2",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 255,
          "g": 0,
          "opacity": 1,
          "r": 0,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1546387200000,
        10,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 10,
    },
    "x": 100,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Single series area chart - linear Can render two points 1`] = `
Array [
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 100,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Single series area chart - ordinal Can render two points 1`] = `
Array [
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 50,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Single series area chart - time Can render two points 1`] = `
Array [
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1546300800000,
        10,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": Array [
        1,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 1,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1546387200000,
        5,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 5,
    },
    "x": 100,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Stacked areas with 0 values 1`] = `
Array [
  Object {
    "datum": Array [
      1546300800000,
      0,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": 0,
    "mark": null,
    "x": 1546300800000,
    "y0": 0,
    "y1": 0,
  },
  Object {
    "datum": Array [
      1546387200000,
      5,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": 5,
    "mark": null,
    "x": 1546387200000,
    "y0": 0,
    "y1": 0.7142857142857143,
  },
]
`;

exports[`Rendering points - areas Stacked areas with null values 1`] = `
Array [
  Object {
    "datum": Array [
      1546300800000,
      null,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": null,
    "mark": null,
    "x": 1546300800000,
    "y0": 0,
    "y1": 0,
  },
  Object {
    "datum": Array [
      1546387200000,
      5,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": 5,
    "mark": null,
    "x": 1546387200000,
    "y0": 0,
    "y1": 5,
  },
]
`;

exports[`Rendering points - areas Stacked areas with null values 2`] = `
Array [
  Object {
    "datum": Array [
      1546300800000,
      3,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": 3,
    "mark": null,
    "x": 1546300800000,
    "y0": 0,
    "y1": 3,
  },
  Object {
    "datum": Array [
      1546387200000,
      null,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": null,
    "mark": null,
    "x": 1546387200000,
    "y0": 5,
    "y1": 5,
  },
]
`;
